# llamacpp-go

./: README.md  gen.go
ggml/: CMakeLists.txt  Makefile
ggml/simple/: simple-backend.cpp
ggml/src/: ggml.go
ggml/src/ggml-cpu/: ggml-cpu.c  ggml-cpu.cpp
